--- a/calculator/app/src/main/res/values/strings.xml
+++ b/calculator/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">计算器</string>
     <string name="hint_text">请输入表达式</string>
+    <string name="hint_text2">请选择模式</string>
 </resources>
